Fixed menu alignment

--- a/TNAtoolAPI-Webapp/src/main/webapp/resources/css/jquery-ui.css
+++ b/TNAtoolAPI-Webapp/src/main/webapp/resources/css/jquery-ui.css
@@ -492,7 +492,7 @@ button.ui-button::-moz-focus-inner {
 	padding: 0;
 	width: 100%;
 	/* support: IE10, see #8844 */
-	list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
+/* 	list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7); */
 }
 .ui-menu .ui-menu-divider {
 	margin: 5px -2px 5px -2px;
